--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "author": "Pratham Bhoraniya",
   "license": "ISC",
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2"
   },
